--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,7 @@
 	"short_name": "KP1976",
 	"name": "Portfolio Krzysztofa Pawłowskiego",
 	"start_url": "index.html?launcher=true",
-	"icons": [
-		{
-			"type": "image/png",
-			"sizes": "192x192"
-		},
-		{
-			"type": "image/png",
-			"sizes": "512x512"
-		}
-	],
-	"background_color": "#5e565a",
+	"background_color": "#524c50",
 	"display": "standalone",
 	"theme_color": "#ff934f"
 }
