--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,13 @@
 {
 	"short_name": "KP1976",
 	"name": "Portfolio Krzysztofa Pawłowskiego",
+	"icons": [
+		{
+			"src": "favicon.ico",
+			"sizes": "512x512 192x192 64x64 32x32 24x24 16x16",
+			"type": "image/x-icon"
+		}
+	],
 	"start_url": "index.html?launcher=true",
 	"background_color": "#333333",
 	"display": "standalone",
